--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openmusic-api_v2",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "migrate": "node-pg-migrate"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ramadhan Muhamad Taufiq",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.21.0",
@@ -19,7 +19,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.2.2",
+    "@hapi/hapi": "^21.3.2",
     "@hapi/jwt": "^3.2.0",
     "auto-bind": "^4.0.0",
     "bcrypt": "^5.0.1",
